# compiladorC

./: CMakeLists.txt  Codigo.gsh  Reglas.txt  Semantico.cpp  Semantico.h  Token.cpp  Token.h  main.cpp
